Fix mobile Safari date navigation overflow behavior

--- a/src/components/date-navigation/_style.scss
+++ b/src/components/date-navigation/_style.scss
@@ -19,4 +19,8 @@
 	width: 100%;
 	opacity: 0;
 	cursor: pointer;
+
+	&[type="date"] {
+		-webkit-appearance: none;
+	}
 }
